# Agent-Builder

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  app.js  pyproject.toml  requirements.txt  sitecustomize.py
.github/workflows/: ci.yml
src/agents/: __init__.py  github_tools.py  gmail_tools.py  gmail_triage.py  guardrails.py  triage.py
src/app/: __init__.py  cli.py  main.py
src/app_agents/: __init__.py  github_tools.py  gmail_tools.py  gmail_triage.py  guardrails.py  sdk.py  triage.py
src/project_agents/: __init__.py
tests/: conftest.py  test_smoke.py
